solc_ossfuzz_seed_corpus/test_sol/test_087835ec7172436e811d79eb09c74915cfcdaedaf34a124fae3f9439e9c0cea2_fallback_override_multiple_different_signature_sol.sol
contract A {
    fallback (bytes calldata _input) external returns (bytes memory) {
        return _input;
    }
}
contract B {
    fallback () external returns (bytes memory) {
        return "xyz";
    }
}
// ----
// TypeError 6480: (208-399): Derived contract must override function "". Two or more base classes define function with same name and parameter types.
// TypeError 5570: (161-175): Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
